--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+body {
+  background-color: gray;
+}
+
 .App {
-  text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.topbar {
+  background-color: white;
+  padding: 1rem 5rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.options {
+  margin: 2rem 5rem;
+  display: flex;
+  justify-content: space-between;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.countries-grid {
+  margin: 1rem 5rem;
+  display: grid;
+  grid-template-columns: repeat(4, .25fr);
+  grid-gap: 5rem;
 }
