--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
 .topbar {
   background-color: white;
-  padding: 1rem 5rem;
+  padding: 2.5rem 5rem;
   display: flex;
   justify-content: space-between;
+  box-shadow: 2px 2px 5px #EDEDED;
+  transition: all 0.25s linear;
+  position: relative;
+  z-index: 60;
+}
+
+.topbar-dark {
+  background-color: #2B3743;
+  color: #FAFAFA;
+  box-shadow: 2px 2px 5px #1E2B34;
+  transition: all 0.25s linear;
 }
 
 .options {
   margin: 2rem 5rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
 
 }
 
+
+
+
 .countries-grid {
-  margin: 1rem 5rem;
+  margin: 4rem 5rem;
   display: grid;
   grid-template-columns: repeat(4, .25fr);
-  grid-gap: 5rem;
+  grid-gap: 8rem;
+
+  
+}
+
+
+
+.title {
+  font-weight: 800;
+  font-size: 2rem;
+}
+
+
+
+.darkmode {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.darkmode-dark {
+  color: #FAFAFA;
+  background-color: transparent;
+  border: none;
+}
+
+.show-no-overlay {
+  opacity: 1;
+  transition: all 0.25s linear;
+}
+
+.hide-for-overlay {
+  opacity: 0;
+  transition: all 0.25s linear;
+  display: none;
+}
+
+.error {
+  color: red;
+  font-weight: bold;
+  font-size: 1.6rem;
+}
+
+@media only screen and (max-width: 75em) { /* tablet */
+  .countries-grid {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+}
+
+@media only screen and (max-width: 40em) { /* mobile */
+  .countries-grid {
+    grid-template-columns: 1fr;
+
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .options {
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    margin: 2rem 2rem;
+  }
 }
