--- a/src/CountryCard/CountryCard.css
+++ b/src/CountryCard/CountryCard.css
@@ -1,27 +1,52 @@
-img {
-    max-width: 100%;
-}
-
 .country-card {
     /* display: inline-block; */
     background-color: white;
     border-radius: 3px;
     overflow: hidden;
+    /* box-shadow: 1px 1px 5px rgba(black, 0.2); */
+    box-shadow: 2px 2px 5px #EDEDED;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transition: all 0.25s linear;
+}
+
+.country-card:hover {
+    box-shadow: 0 0 10px 5px #ccc;
+    cursor: pointer;
+}
+
+.country-card-dark {
+    background-color: #2B3743;
+    transition: all 0.25s linear;
+}
+
+.country-card__image {
+    height: 16rem;
+    overflow: hidden;
+}
+
+img {
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    overflow: hidden;
 }
 
 .country-card__name {
-    text-decoration: underline;
     font-weight: 800;
+    margin-bottom: 1rem;
+    font-size: 2rem;
 }
 
 .country-card__details {
-    padding: 2rem;
+    padding: 2.5rem;
+
 }
 
 p {
+    font-size: 1.5rem;
+    margin: 1.2rem 0;
 
 }
 
